c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_parse/string_literal_varname.c
/* You can't use a string literal as a variable name */

int main(void) {
    int "x" = 0;
    return 0;
}